homepage content and design

--- a/src/assets/stylesheets/components/__components.scss
+++ b/src/assets/stylesheets/components/__components.scss
@@ -1,4 +1,11 @@
-@import "header";
-@import "footer";
+@import "button";
 @import "container";
+@import "footer";
+@import "form";
+@import "form-row";
+@import "header";
+@import "hero";
+@import "input";
+@import "label";
+@import "logo";
 @import "map";
