--- a/src/assets/stylesheets/settings/_colors.scss
+++ b/src/assets/stylesheets/settings/_colors.scss
@@ -289,6 +289,5 @@ $full-white: rgba(255, 255, 255, 1);
 $dark-white: rgba(255, 255, 255, 0.87);
 $light-white: rgba(255, 255, 255, 0.54);
 
-// Custom colors
-
-$gatsby-purple: rebeccapurple;
+$launchtime-purple: $deep-purple-A400;
+$launchtime-cyan: $cyan-400;
