--- a/src/assets/stylesheets/settings/_fonts.scss
+++ b/src/assets/stylesheets/settings/_fonts.scss
@@ -1,2 +1,4 @@
-$font-sans-serif: Helvetica, Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap');
+
+$font-sans-serif: 'Ubuntu', Helvetica, Arial, sans-serif;
 $font-default: $font-sans-serif;
