--- a/src/assets/stylesheets/components/_footer.scss
+++ b/src/assets/stylesheets/components/_footer.scss
@@ -5,7 +5,7 @@ footer {
   line-height: 2em;
   color: $white;
   text-align: center;
-  background-color: $blue-grey-700;
+  background-color: $launchtime-purple-dark;
 
   p {
     font-size: 1em;
